preparing spec-z opt-nir Cigale inputs on all fields

--- a/dmu1/dmu1_ml_SPIRE-NEP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SPIRE-NEP/2_Merging.ipynb
@@ -25,7 +25,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -355,31 +357,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), False, dtype=bool),\n",
-    "                                   name=\"zspec_association_flag\"))\n",
-    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), '', dtype='<U33'),\n",
-    "                                   name=\"specz_id\"))\n",
-    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), -99, dtype=int),\n",
-    "                                   name=\"zspec_qual\"))\n",
-    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), np.nan),\n",
-    "                                   name=\"zspec\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#specz =  Table.read(\"../../dmu23/dmu23_GAMA-12/data/GAMA12-specz-v2-PRIVATE.csv\")"
+    "specz =  Table.read(\"../../dmu23/dmu23_SPIRE-NEP/data/SPIRE-NEP-specz-v2.csv\")"
    ]
   },
   {
@@ -390,25 +374,14 @@
    },
    "outputs": [],
    "source": [
-    "#specz.rename_column('RA', 'ra')\n",
-    "#specz.rename_column('DEC', 'dec')\n",
-    "#specz.rename_column('OBJID', 'specz_id')\n",
-    "#specz.rename_column('Z_SPEC', 'z_spec')\n",
-    "#specz.rename_column('Z_SOURCE', 'z_source')\n",
-    "#specz.rename_column('Z_QUAL', 'z_qual')\n",
-    "#specz.rename_column('REL', 'rel')\n",
-    "#specz.rename_column('AGN', 'agn')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#specz[:10].show_in_notebook()"
+    "specz.rename_column('RA', 'ra')\n",
+    "specz.rename_column('DEC', 'dec')\n",
+    "specz.rename_column('OBJID', 'specz_id')\n",
+    "specz.rename_column('Z_SPEC', 'z_spec')\n",
+    "specz.rename_column('Z_SOURCE', 'z_source')\n",
+    "specz.rename_column('Z_QUAL', 'z_qual')\n",
+    "specz.rename_column('REL', 'rel')\n",
+    "specz.rename_column('AGN', 'agn')"
    ]
   },
   {
@@ -419,10 +392,10 @@
    },
    "outputs": [],
    "source": [
-    "#nb_merge_dist_plot(\n",
-    "#    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
-    "#    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
-    "#)"
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
+    ")"
    ]
   },
   {
@@ -433,7 +406,7 @@
    },
    "outputs": [],
    "source": [
-    "#master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
+    "master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
    ]
   },
   {
