--- a/dmu32/dmu32_EGS/EGS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_EGS/EGS_catalogue_merging.ipynb
@@ -19,6 +19,20 @@
    },
    "outputs": [],
    "source": [
+    "from herschelhelp_internal import git_version\n",
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "\n",
     "from astropy.table import Column, MaskedColumn, Table, join, vstack\n",
@@ -64,7 +78,7 @@
     "# Master list\n",
     "\n",
     "ml = Table.read(\n",
-    "    \"../../dmu1/dmu1_ml_EGS/data/master_catalogue_egs_20171202.fits\")\n",
+    "    \"../../dmu1/dmu1_ml_EGS/data/master_catalogue_egs_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
    ]
   },
@@ -296,6 +310,17 @@
     "# Fill values\n",
     "#merged_table['redshift'].fill_value = np.nan\n",
     "#merged_table = merged_table.filled()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged_table = ml"
    ]
   },
   {
