--- a/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
+++ b/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
@@ -43,7 +43,7 @@
     "# to continue and merge the CIGALE results too.\n",
     "FIRST_RUN_FOR_CIGALE = True\n",
     "\n",
-    "SUFFIX = ''"
+    "SUFFIX = '20171212'"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "# Master list\n",
     "\n",
     "ml = Table.read(\n",
-    "    \"../../dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_hdf-n_{}.fits\".format(SUFFIX))\n",
+    "    \"../../dmu1/dmu1_ml_HDF-N/data/master_catalogue_hdf-n_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
    ]
   },
@@ -349,7 +349,7 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/HDF-N_{}_cigale.fits\".format(SUFFIX))"
+    "    merged_table.write(\"data/HDF-N_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
