--- a/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
@@ -339,7 +339,7 @@
     "    assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/Lockman-SWIRE_{}_cigale.fits\".format(SUFFIX))"
+    "    merged_table.write(\"data/Lockman-SWIRE_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
