--- a/dmu32/dmu32_SA13/SA13_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SA13/SA13_catalogue_merging.ipynb
@@ -43,7 +43,7 @@
     "# to continue and merge the CIGALE results too.\n",
     "FIRST_RUN_FOR_CIGALE = True\n",
     "\n",
-    "SUFFIX = ''"
+    "SUFFIX = '20171123'"
    ]
   },
   {
@@ -299,6 +299,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged_table = ml"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -338,7 +349,7 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/SA13_{}_cigale.fits\".format(SUFFIX))"
+    "    merged_table.write(\"data/SA13_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
