--- a/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
@@ -25,7 +25,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -568,14 +570,50 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), False, dtype=bool),\n",
-    "                                   name=\"zspec_association_flag\"))\n",
-    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), '', dtype='<U33'),\n",
-    "                                   name=\"specz_id\"))\n",
-    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), -99, dtype=int),\n",
-    "                                   name=\"zspec_qual\"))\n",
-    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), np.nan),\n",
-    "                                   name=\"zspec\"))"
+    "specz =  Table.read(\"../../dmu23/dmu23_SGP/data/SGP-specz-ver2.0.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "specz.rename_column('RA', 'ra')\n",
+    "specz.rename_column('DEC', 'dec')\n",
+    "specz.rename_column('OBJID', 'specz_id')\n",
+    "specz.rename_column('Z_SPEC', 'z_spec')\n",
+    "specz.rename_column('Z_SOURCE', 'z_source')\n",
+    "specz.rename_column('Z_QUAL', 'z_qual')\n",
+    "specz.rename_column('REL', 'rel')\n",
+    "specz.rename_column('AGN', 'agn')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
    ]
   },
   {
