--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -60,9 +60,9 @@
    "outputs": [],
    "source": [
     "# Master list\n",
-    "\n",
+    "SUFFIX='20180215'\n",
     "ml = Table.read(\n",
-    "    \"../../dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_cdfs-swire_20180129.fits\")\n",
+    "    \"../../dmu1/dmu1_ml_COSMOS/data/master_catalogue_cosmos_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
    ]
   },
@@ -76,8 +76,8 @@
    "source": [
     "# XID+ MIPS24\n",
     "\n",
-    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
-    "                          \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
+    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_COSMOS/data/\"\n",
+    "                          \"dmu26_XID+MIPS_COSMOS_cat_20170901.fits\")\n",
     "xid_mips24.meta = None\n",
     "\n",
     "# Adding the error column\n",
@@ -94,13 +94,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# XID+ PACS\n",
     "\n",
-    "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
-    "                        \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
+    "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_COSMOS/data/\"\n",
+    "                        \"dmu26_XID+PACS_COSMOS_cat_20171019.fits\")\n",
     "xid_pacs.meta = None\n",
     "\n",
     "# Convert from mJy to μJy\n",
@@ -134,13 +136,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# XID+ SPIRE\n",
     "\n",
-    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
-    "                         \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
+    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_COSMOS/data/\"\n",
+    "                         \"dmu26_XID+SPIRE_COSMOS_cat_20170919.fits\")\n",
     "xid_spire.meta = None\n",
     "\n",
     "xid_spire['HELP_ID'].name = \"help_id\"\n",
@@ -188,9 +192,10 @@
    "outputs": [],
    "source": [
     "# Photo-z\n",
+    "#Get photoz from COSMOS2015 catalogue\n",
     "\n",
-    "#photoz = Table.read(\"../../dmu24/dmu24_/data/\")\n",
-    "#photoz.meta = None\n",
+    "photoz = Table.read(\"../../dmu0/dmu0_COSMOS2015/data/asdfgasdgasdfg.fits\")['help_id', 'z1_median']\n",
+    "photoz.meta = None\n",
     "\n",
     "#photoz = photoz['help_id', 'z1_median']\n",
     "#photoz['z1_median'].name = 'redshift'\n",
@@ -208,9 +213,9 @@
    "source": [
     "# Temp spec-z\n",
     "\n",
-    "ml['zspec'].name = 'redshift'\n",
+    "#ml['zspec'].name = 'redshift'\n",
     "\n",
-    "ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -285,11 +290,11 @@
    },
    "outputs": [],
    "source": [
-    "#merged_table = join(merged_table, photoz, join_type='left')\n",
+    "merged_table = join(merged_table, photoz, join_type='left')\n",
     "\n",
     "# Fill values\n",
-    "#merged_table['redshift'].fill_value = np.nan\n",
-    "#merged_table = merged_table.filled()"
+    "merged_table['redshift'].fill_value = np.nan\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -332,7 +337,7 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/CDFS-SWIRE_20180129_cigale.fits\")"
+    "    merged_table.write(\"data/COSMOS_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
