--- a/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
@@ -45,7 +45,7 @@
     "# to continue and merge the CIGALE results too.\n",
     "FIRST_RUN_FOR_CIGALE = True\n",
     "\n",
-    "SUFFIX = ''"
+    "SUFFIX = '20180113'"
    ]
   },
   {
