--- a/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
@@ -43,7 +43,7 @@
     "# to continue and merge the CIGALE results too.\n",
     "FIRST_RUN_FOR_CIGALE = True\n",
     "\n",
-    "SUFFIX = ''"
+    "SUFFIX = '20171123'"
    ]
   },
   {
@@ -349,7 +349,7 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/XMM-13hr_{}_cigale.fits\".format(SUFFIX))"
+    "    merged_table.write(\"data/XMM-13hr_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
