filter renaming AKARI-NEP

--- a/dmu1/dmu1_ml_AKARI-NEP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_AKARI-NEP/3_Checks_and_diagnostics.ipynb
@@ -822,8 +822,8 @@
     }
    ],
    "source": [
-    "ukidss_ks_like = master_catalogue['m_wircam_k'] + 0.003 + 0.004 * (\n",
-    "    master_catalogue['m_wircam_j'] - master_catalogue['m_wircam_k'])\n",
+    "ukidss_ks_like = master_catalogue['m_wircam_ks'] + 0.003 + 0.004 * (\n",
+    "    master_catalogue['m_wircam_j'] - master_catalogue['m_wircam_ks'])\n",
     "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, ukidss_ks_like[ml_twomass_idx],\n",
     "                labels=(\"2MASS Ks\", \"WIRCAM Ks-like (total)\"))"
    ]
@@ -933,7 +933,7 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_megacam_g'] - master_catalogue['m_megacam_i'],\n",
-    "    master_catalogue['m_wircam_j'] - master_catalogue['m_wircam_k'],\n",
+    "    master_catalogue['m_wircam_j'] - master_catalogue['m_wircam_ks'],\n",
     "    \"g - i (Megacam)\", \"J - K (WIRCAM)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
@@ -1028,7 +1028,7 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_wircam_j'] - master_catalogue['m_wircam_k'],\n",
+    "    master_catalogue['m_wircam_j'] - master_catalogue['m_wircam_ks'],\n",
     "    master_catalogue['m_gpc1_g'] - master_catalogue['m_wircam_j'],\n",
     "    \"J - K (WIRCAM)\", \"g - J (GPC1, WIRCAM)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
