updataing columns on Bootes

--- a/dmu1/dmu1_ml_Bootes/1.5_NDWFS.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1.5_NDWFS.ipynb
@@ -126,10 +126,10 @@
     "        'b_magerr_aper_02': \"merr_ap_mosaic_b\", \n",
     "        'b_mag_auto': \"m_mosaic_b\", \n",
     "        'b_magerr_auto': \"merr_mosaic_b\",\n",
-    "            'k_mag_aper_02': \"m_ap_mosaic_k\", \n",
-    "        'k_magerr_aper_02': \"merr_ap_mosaic_k\", \n",
-    "        'k_mag_auto': \"m_mosaic_k\", \n",
-    "        'k_magerr_auto': \"merr_mosaic_k\"\n",
+    "            'k_mag_aper_02': \"m_ap_mosaic_ks\", \n",
+    "        'k_magerr_aper_02': \"merr_ap_mosaic_ks\", \n",
+    "        'k_mag_auto': \"m_mosaic_ks\", \n",
+    "        'k_magerr_auto': \"merr_mosaic_ks\"\n",
     "    })\n",
     "\n",
     "\n",
@@ -282,7 +282,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_ap_mosaic_b', 'merr_ap_mosaic_i', 'merr_ap_mosaic_r', 'merr_ap_mosaic_k']\n",
+    "SORT_COLS = ['merr_ap_mosaic_b', 'merr_ap_mosaic_i', 'merr_ap_mosaic_r', 'merr_ap_mosaic_ks']\n",
     "FLAG_NAME = 'ndwfs_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
