--- a/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -90,7 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "decals = Table.read(\"{}/DECaLS.fits\".format(TMP_DIR))\n",
+    "#decals = Table.read(\"{}/DECaLS.fits\".format(TMP_DIR))\n",
     "datafusion = Table.read(\"{}/Datafusion.fits\".format(TMP_DIR))\n",
     "ibis = Table.read(\"{}/IBIS.fits\".format(TMP_DIR))\n",
     "legacy = Table.read(\"{}/LegacySurvey.fits\".format(TMP_DIR))\n",
@@ -136,7 +138,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add DECaLS"
+    "### Add DECaLS\n",
+    "\n",
+    "DECaLS contains the LegacySurvey data so is not included again"
    ]
   },
   {
@@ -156,10 +160,10 @@
     }
    ],
    "source": [
-    "nb_merge_dist_plot(\n",
-    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
-    "    SkyCoord(decals['decals_ra'], decals['decals_dec'])\n",
-    ")"
+    "# nb_merge_dist_plot(\n",
+    "#     SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "#     SkyCoord(decals['decals_ra'], decals['decals_dec'])\n",
+    "# )"
    ]
   },
   {
@@ -170,8 +174,8 @@
    },
    "outputs": [],
    "source": [
-    "# Given the graph above, we use 0.8 arc-second radius\n",
-    "master_catalogue = merge_catalogues(master_catalogue, decals, \"decals_ra\", \"decals_dec\", radius=0.8*u.arcsec)"
+    "# # Given the graph above, we use 0.8 arc-second radius\n",
+    "# master_catalogue = merge_catalogues(master_catalogue, decals, \"decals_ra\", \"decals_dec\", radius=0.8*u.arcsec)"
    ]
   },
   {
@@ -619,7 +623,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We create an masked array with all the stellarities and get the maximum value, as well as its\n",
@@ -807,7 +813,7 @@
    },
    "outputs": [],
    "source": [
-    "decals_moc = MOC(filename=\"../../dmu0/dmu0_DECaLS/data/DECaLS_Bootes_MOC.fits\")\n",
+    "#decals_moc = MOC(filename=\"../../dmu0/dmu0_DECaLS/data/DECaLS_Bootes_MOC.fits\")\n",
     "datafusion_moc = MOC(filename=\"../../dmu0/dmu0_DataFusion-Spitzer/data/Datafusion-Bootes_MOC.fits\")\n",
     "ibis_moc = MOC(filename=\"../../dmu0/dmu0_IBIS/data/IBIS_MLselected_20160801_MOC.fits\")\n",
     "legacy_moc = MOC(filename=\"../../dmu0/dmu0_LegacySurvey/data/LegacySurvey-dr4_Bootes_MOC.fits\")\n",
@@ -828,7 +834,8 @@
    "source": [
     "was_observed_optical = inMoc(\n",
     "    master_catalogue['ra'], master_catalogue['dec'],\n",
-    "    decals_moc + ps1_moc + zbootes_moc + legacy_moc + ndwfs_moc) \n",
+    "    #decals_moc + \n",
+    "    ps1_moc + zbootes_moc + legacy_moc + ndwfs_moc) \n",
     "\n",
     "was_observed_nir = inMoc(\n",
     "    master_catalogue['ra'], master_catalogue['dec'],\n",
@@ -907,13 +914,13 @@
     "    1 * ~np.isnan(master_catalogue['f_mosaic_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_mosaic_b']) +\n",
     "    \n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_g']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_z']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_mosaic_z']) +\n",
     "    \n",
-    "    1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
+    "    #1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
+    "    #1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
+    "    #1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
     "\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_g']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_r']) +\n",
