Bootes spec-z Cigale input

--- a/dmu1/dmu1_ml_COSMOS/1.9_COSMOS2015.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.9_COSMOS2015.ipynb
@@ -106,7 +106,7 @@
     "    'b': 'suprime_b',\n",
     "    'v': 'suprime_v',\n",
     "    'ip': 'suprime_ip',\n",
-    "    'r': 'suprime_rp',\n",
+    "    'r': 'suprime_rc',\n",
     "    'zp': 'suprime_zp',\n",
     "    'zpp': 'suprime_zpp',\n",
     "    'ia484': 'suprime_ia484',\n",
@@ -391,7 +391,7 @@
    "source": [
     "# Adding flux and band-flag columns\n",
     "for col in catalogue.colnames:\n",
-    "    print(col)\n",
+    "    #print(col)\n",
     "    if 'irac' in col:\n",
     "        if col.startswith('f_'):\n",
     "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
