--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -77,7 +77,7 @@
     "# XID+ MIPS24\n",
     "\n",
     "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_COSMOS/data/\"\n",
-    "                          \"dmu26_XID+MIPS_COSMOS_cat_20170901.fits\")\n",
+    "                          \"dmu26_XID+MIPS_COSMOS_cat_20170213.fits\")\n",
     "xid_mips24.meta = None\n",
     "\n",
     "# Adding the error column\n",
@@ -102,7 +102,7 @@
     "# XID+ PACS\n",
     "\n",
     "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_COSMOS/data/\"\n",
-    "                        \"dmu26_XID+PACS_COSMOS_cat_20171019.fits\")\n",
+    "                        \"dmu26_XID+PACS_COSMOS_cat_20170303.fits\")\n",
     "xid_pacs.meta = None\n",
     "\n",
     "# Convert from mJy to μJy\n",
@@ -144,7 +144,7 @@
     "# XID+ SPIRE\n",
     "\n",
     "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_COSMOS/data/\"\n",
-    "                         \"dmu26_XID+SPIRE_COSMOS_cat_20170919.fits\")\n",
+    "                         \"dmu26_XID+SPIRE_COSMOS_20161129.fits\")\n",
     "xid_spire.meta = None\n",
     "\n",
     "xid_spire['HELP_ID'].name = \"help_id\"\n",
@@ -194,13 +194,13 @@
     "# Photo-z\n",
     "#Get photoz from COSMOS2015 catalogue\n",
     "\n",
-    "photoz = Table.read(\"../../dmu0/dmu0_COSMOS2015/data/asdfgasdgasdfg.fits\")['help_id', 'z1_median']\n",
+    "photoz = Table.read(\"../../dmu0/dmu0_COSMOS2015/data/COSMOS2015-HELP_selected_20160613.fits\")['help_id', 'zminchi2']\n",
     "photoz.meta = None\n",
     "\n",
     "#photoz = photoz['help_id', 'z1_median']\n",
-    "#photoz['z1_median'].name = 'redshift'\n",
+    "photoz['zminchi2'].name = 'redshift'\n",
     "\n",
-    "#photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -360,7 +360,7 @@
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_CDFS-SWIRE/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_COSMOS/data/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -502,7 +502,7 @@
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "    merged_table[columns].write(\"data/COSMOS.fits\")"
    ]
   }
  ],
