Depth map bugfixing

--- a/dmu1/dmu1_ml_Lockman-SWIRE/4_Selection_function.ipynb
+++ b/dmu1/dmu1_ml_Lockman-SWIRE/4_Selection_function.ipynb
@@ -666,7 +666,7 @@
    },
    "outputs": [],
    "source": [
-    "depths.write(\"{}/depths_lockman-swire{}.fits\".format(OUT_DIR, SUFFIX))"
+    "depths.write(\"{}/depths_lockman-swire_{}.fits\".format(OUT_DIR, SUFFIX))"
    ]
   }
  ],
